# grodt

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  test_robinhood_connection.py  to_do.md
.bmad-core/: install-manifest.yaml
configs/: alert_rules.yaml  alerting.yaml  backup.yaml  docker.yaml  performance.yaml  performance_alerting.yaml  regime.yaml  retention.yaml  risk.yaml  robinhood.yaml  settings.yaml  strategy_gating.yaml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.scale.yml  docker-compose.staging.yml  docker-compose.yml  env.example  networks.yml  security.yml  volume-monitor.yml  volumes.yml
docker/grafana/: grafana.ini
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docs/: docker-deployment.md  po-briefing-infrastructure-roadmap.md  prd-phase2-adaptive-engine.md  prd-phase3-production-infrastructure.md  prd-phase4-advanced-features.md  prd-post-mvp.md  prd.md  system-architecture.md
docs/architecture/: architectural-goals-constraints.md  cicd-pipeline-github-actions.md  coding-standards.md  component-deep-dive.md  data-architecture.md  deployment-architecture.md  index.md  introduction.md  monitoring-observability.md  source-tree.md  system-overview-logical-architecture.md  tech-stack.md
docs/design/: atr-stop-loss-design.md  bracket-orders-design.md  execution-engine-integration-design.md  risk-reward-configuration-design.md  test-design.md  trade-exit-comprehensive-design.md  trade-exit-service-design.md
docs/prd/: dependencies.md  index.md  product-requirements-user-stories.md  project-analysis-and-context.md  technical-specifications-implementation-plan.md
docs/prd-phase2/: dependencies.md  index.md  product-requirements-user-stories.md  project-analysis-and-context.md  risk-mitigation.md  success-metrics.md  technical-specifications-implementation-plan.md  timeline-resource-allocation.md
docs/prd-phase3/: dependencies.md  index.md  product-requirements-user-stories.md  project-analysis-and-context.md  risk-mitigation.md  success-metrics.md  technical-specifications-implementation-plan.md  timeline-resource-allocation.md
docs/prd-phase4/: dependencies.md  future-considerations.md  index.md  product-requirements-user-stories.md  project-analysis-and-context.md  risk-mitigation.md  success-metrics.md  technical-specifications-implementation-plan.md  timeline-resource-allocation.md
docs/stories/: 1.1.trend-identification.md  1.2.trade-entry.md  1.3.trade-exit.md  2.1.1.market-regime-classification.md  2.1.2.regime-based-strategy-gating.md  2.1.3.regime-performance-analytics.md  2.2.1.historical-data-pipeline.md  2.2.2.parquet-backup-system.md  2.2.3.data-retention-cleanup.md  2.2.4.feature-store-implementation.md  2.3.1.prometheus-metrics-collection.md  2.3.2.grafana-dashboard-creation.md  2.3.3.alerting-system.md  2.3.4.performance-monitoring.md  3.1.1.docker-containerization.md  3.1.2.docker-compose-orchestration.md  3.1.3.environment-management.md  3.1.4.health-checks-probes.md  3.2.1.github-actions-pipeline.md
examples/: robinhood_example.py
grodtbt/: __init__.py
grodtbt/engine/: __init__.py  backtester.py
grodtd/: __init__.py  app.py  web_app.py
grodtd/analytics/: __init__.py  regime_performance_service.py
grodtd/config/: alpaca_config.py  robinhood_config.py
grodtd/connectors/: __init__.py  alpaca.py  base.py  factory.py  (+1 more)
scripts/: config-manager.sh  docker-dev.sh  docker-security-scan.sh  network-monitor.sh  scale-manager.sh  test-docker.sh  volume-manager.sh
tests/: __init__.py
(+150 files in other folders)
